--- a/requirements.txt
+++ b/requirements.txt
@@ -2,21 +2,54 @@ aiohappyeyeballs==2.4.3
 aiohttp==3.10.10
 aiohttp-retry==2.8.3
 aiosignal==1.3.1
+amqp==5.2.0
 asgiref==3.8.1
+astroid==3.3.5
 attrs==24.2.0
+autopep8==2.3.1
+billiard==4.2.1
+celery==5.4.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
+click==8.1.7
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cron-descriptor==1.4.5
 decouple==0.0.7
+dill==0.3.9
 Django==5.1.2
+django-celery-beat==2.7.0
+django-timezone-field==7.0
 frozenlist==1.4.1
+gunicorn==23.0.0
 idna==3.10
+isort==5.13.2
+kombu==5.4.2
+mccabe==0.7.0
 multidict==6.1.0
+packaging==24.2
+platformdirs==4.3.6
+prompt_toolkit==3.0.48
 propcache==0.2.0
+pycodestyle==2.12.1
 PyJWT==2.9.0
+pylint==3.3.1
 pyngrok==7.2.0
+python-crontab==3.2.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 PyYAML==6.0.2
+razorpay==1.4.2
+redis==5.2.0
 requests==2.32.3
+setuptools==75.4.0
+six==1.16.0
 sqlparse==0.5.1
+tomlkit==0.13.2
 twilio==9.3.4
+tzdata==2024.2
 urllib3==2.2.3
+vine==5.1.0
+wcwidth==0.2.13
 yarl==1.15.5
